# Qedit

./: .gitignore  CMakeLists.txt  CONFIG.md  README.md  build.sh  main.cpp  sample.qeditrc  test_config.sh
.github/workflows/: local-test.yml  tests.yml
lib/: Config.cpp  Config.h  EditorError.h  config_test.cpp
src/: EditorCommands.h  QEditor.cpp  QEditor.h
tests/: editor_test.cpp
